@@ -52,7 +52,6 @@ module ActionController #:nodoc:
         include ActionController::Assertions::TagAssertions
         include ActionController::Assertions::DomAssertions
         include ActionController::Assertions::ModelAssertions
-        include ActionController::Assertions::DeprecatedAssertions
       end
     end
 
@@ -71,7 +70,6 @@ require File.dirname(__FILE__) + '/assertions/tag_assertions'
 require File.dirname(__FILE__) + '/assertions/dom_assertions'
 require File.dirname(__FILE__) + '/assertions/routing_assertions'
 require File.dirname(__FILE__) + '/assertions/model_assertions'
-require File.dirname(__FILE__) + '/assertions/deprecated_assertions'
 
 module Test #:nodoc:
   module Unit #:nodoc:
