@@ -175,13 +175,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
     assert_tag :content => "/action_pack_assertions/flash_me"
   end
 
-  # test the session assertion to make sure something is there.
-  def test_assert_session_has
-    process :session_stuffing
-    assert_deprecated_assertion { assert_session_has 'xmas' }
-    assert_deprecated_assertion { assert_session_has_no 'halloween' }
-  end
-
   # test the get method, make sure the request really was a get
   def test_get
     assert_raise(RuntimeError) { get :raise_on_get }
@@ -208,49 +201,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
 #     get :raise_on_post
 #     assert_equal @response.body, 'request method: GET'
 #   end
-
-  # test the assertion of goodies in the template
-  def test_assert_template_has
-    process :assign_this
-    assert_deprecated_assertion { assert_template_has 'howdy' }
-  end
-
-  # test the assertion for goodies that shouldn't exist in the template
-  def test_assert_template_has_no
-    process :nothing
-    assert_deprecated_assertion { assert_template_has_no 'maple syrup' }
-    assert_deprecated_assertion { assert_template_has_no 'howdy' }
-  end
-
-  # test the redirection assertions
-  def test_assert_redirect
-    process :redirect_internal
-    assert_deprecated_assertion { assert_redirect }
-  end
-
-  # test the redirect url string
-  def test_assert_redirect_url
-    process :redirect_external
-    assert_deprecated_assertion do
-      assert_redirect_url 'http://www.rubyonrails.org'
-    end
-  end
-
-  # test the redirection pattern matching on a string
-  def test_assert_redirect_url_match_string
-    process :redirect_external
-    assert_deprecated_assertion do
-      assert_redirect_url_match 'rails.org'
-    end
-  end
-
-  # test the redirection pattern matching on a pattern
-  def test_assert_redirect_url_match_pattern
-    process :redirect_external
-    assert_deprecated_assertion do
-      assert_redirect_url_match /ruby/
-    end
-  end
 
   # test the redirection to a named route
   def test_assert_redirect_to_named_route
@@ -317,46 +267,7 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
     end
   end
 
-  # test the flash-based assertions with something is in the flash
-  def test_flash_assertions_full
-    process :flash_me
-    assert @response.has_flash_with_contents?
-    assert_deprecated_assertion { assert_flash_exists }
-    assert_deprecated_assertion { assert_flash_not_empty }
-    assert_deprecated_assertion { assert_flash_has 'hello' }
-    assert_deprecated_assertion { assert_flash_has_no 'stds' }
-  end
-
-  # test the flash-based assertions with no flash at all
-  def test_flash_assertions_negative
-    process :nothing
-    assert_deprecated_assertion { assert_flash_empty }
-    assert_deprecated_assertion { assert_flash_has_no 'hello' }
-    assert_deprecated_assertion { assert_flash_has_no 'qwerty' }
-  end
-
-  # test the assert_rendered_file
-  def test_assert_rendered_file
-    assert_deprecated(/render/) { process :hello_world }
-    assert_deprecated_assertion { assert_rendered_file 'test/hello_world' }
-    assert_deprecated_assertion { assert_rendered_file 'hello_world' }
-  end
-
-  # test the assert_success assertion
-  def test_assert_success
-    process :nothing
-    assert_deprecated_assertion { assert_success }
-  end
-
   # -- standard request/response object testing --------------------------------
-
-  # ensure our session is working properly
-  def test_session_objects
-    process :session_stuffing
-    assert @response.has_session_object?('xmas')
-    assert_deprecated_assertion { assert_session_equal 'turkey', 'xmas' }
-    assert !@response.has_session_object?('easter')
-  end
 
   # make sure that the template objects exist
   def test_template_objects_alive
@@ -369,11 +280,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
   def test_template_object_missing
     process :nothing
     assert_nil @response.template_objects['howdy']
-  end
-
-  def test_assigned_equal
-    process :assign_this
-    assert_deprecated_assertion { assert_assigned_equal "ho", :howdy }
   end
 
   # check the empty flashing
@@ -397,14 +303,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
     assert !@response.has_flash?
     assert !@response.has_flash_with_contents?
     assert_nil @response.flash['hello']
-  end
-
-  # examine that the flash objects are what we expect
-  def test_flash_equals
-    process :flash_me
-    assert_deprecated_assertion do
-      assert_flash_equal 'my name is inigo montoya...', 'hello'
-    end
   end
 
   # check if we were rendered by a file-based template?
@@ -489,29 +387,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
     assert_equal "Mr. David", @response.body
   end
 
-  def test_assert_template_xpath_match_no_matches
-    assert_deprecated(/render/) { process :hello_xml_world }
-    assert_raises Test::Unit::AssertionFailedError do
-      assert_deprecated_assertion do
-        assert_template_xpath_match('/no/such/node/in/document')
-      end
-    end
-  end
-
-  def test_simple_one_element_xpath_match
-    assert_deprecated(/render/) { process :hello_xml_world }
-    assert_deprecated_assertion do
-      assert_template_xpath_match('//title', "Hello World")
-    end
-  end
-
-  def test_array_of_elements_in_xpath_match
-    assert_deprecated(/render/) { process :hello_xml_world }
-    assert_deprecated_assertion do
-      assert_template_xpath_match('//p', %w( abes monks wiseguys ))
-    end
-  end
-
   def test_follow_redirect
     process :redirect_to_action
     assert_redirected_to :action => "flash_me"
@@ -577,11 +452,6 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
     rescue Test::Unit::AssertionFailedError => e
     end
   end
-
-  protected
-    def assert_deprecated_assertion(&block)
-      assert_deprecated(/assert/, &block)
-    end
 end
 
 class ActionPackHeaderTest < Test::Unit::TestCase
